# mcps

./: .cursorrules  .dockerignore  .env.example  .env.supabase  .gitattributes  .gitignore  .windsurfrules  AGENTS.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CRITIQUE_AND_ENHANCEMENT_PLAN.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  DATA_DICTIONARY.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRD.md  QUICK_START_POSTGRESQL.md  README.md  README_ENHANCED.md  SECURITY.md  SUPABASE_ONLY.md  SUPABASE_SETUP_GUIDE.md  TASKS.md  docker-compose.prod.yml  docker-compose.supabase.yml  docker-compose.yml  main.py  pyproject.toml  ruff.toml
.amazonq/prompts/: speckit.plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  question.yml
.github/agents/: default.agent.md
.github/prompts/: update.AGENTS.md_instruction_files.prompt.md
.github/workflows/: ci.yml  ingest.yml  test.yml
alembic/: env.py
alembic/versions/: 92d6e346e43e_initial_database_schema.py  a924f40895c1_complete_mcps_schema_with_tools_.py  e7b7364b56f0_add_social_media_models.py
apps/: __init__.py
apps/api/: AGENTS.md  __init__.py  main.py
apps/web/: .env.example  .env.supabase  .gitignore  AGENTS.md  Dockerfile.prod  FRONTEND_ENHANCEMENTS.md  SUPABASE_INTEGRATION_SUMMARY.md  SUPABASE_SETUP.md  eslint.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/web/__tests__/: README.md
apps/web/__tests__/e2e/: homepage.spec.ts
apps/web/__tests__/integration/: cache.test.ts
apps/web/__tests__/unit/components/: Button.test.tsx
apps/web/src/: AGENTS.md  middleware.ts
apps/web/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
apps/web/src/app/actions/: server-actions.ts
apps/web/src/app/auth/callback/: route.ts
apps/web/src/app/graph/: loading.tsx  page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/profile/: page.tsx
apps/web/src/app/servers/: loading.tsx  page.tsx
apps/web/src/app/servers/[id]/: loading.tsx  page.tsx
apps/web/src/app/social/: loading.tsx  page.tsx
apps/web/src/components/: AGENTS.md  AuthButton.tsx  ErrorBoundary.tsx  FileUpload.tsx  Loading.tsx  RealtimeServers.tsx  RealtimeSocial.tsx  advanced-search.tsx  analytics-dashboard.tsx  force-graph.tsx  server-card.tsx  server-comparison.tsx  social-feed.tsx  social-post-card.tsx  stats-cards.tsx  tag-explorer.tsx  trending-section.tsx  video-card.tsx
apps/web/src/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Select.tsx  Tabs.tsx  Toast.tsx  index.ts
apps/web/src/lib/: cache.ts  db.ts  providers.tsx  seo.ts  utils.ts  validations.ts
apps/web/src/lib/supabase/: client.ts  middleware.ts  server.ts
apps/web/src/types/: supabase.ts
data/: .gitignore  .gitkeep
docs/: CONVERSION_SUMMARY.md  README.md  convert_all_rst.sh  convert_rst_to_myst.py
docs/source/: AGENTS.md  architecture.md  changelog.md  conf.py  contributing.md  data-dictionary.md  index.md  installation.md  quick-start.md
docs/source/_static/: custom.css
docs/source/_static/css/: components.css  custom.css  design-tokens.css
docs/source/api/: adapters.md  analysis.md  exporters.md  harvester.md  health-endpoints.md  index.md
docs/source/developer-guide/: adding-adapters.md  frontend-development.md  index.md  testing.md
docs/source/guides/: analysis.md  caching.md  deployment.md  harvesting.md  index.md  monitoring.md  postgresql-migration-plan.md  postgresql-migration-summary.md  postgresql-migration.md  production-deployment.md  supabase-integration.md
docs/source/tools/: index.md
docs/source/user-guide/: cli-usage.md  dashboard.md  data-exports.md  index.md
examples/: database_example.py  github_harvester_usage.py
scripts/: backup-db.sh  build.sh  dev.sh  init-postgres.sql  setup.sh  start-supabase.sh  supabase-enhanced-setup.sql  supabase-setup.sql  test.sh
src/mcps/: __init__.py  database.py  models.py  settings.py
tests/: __init__.py  test_github_harvester.py
