[project]
name = "mcps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
notebook = [
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "ipywidgets>=8.1.8",
    "jupysql>=0.11.1",
    "jupyter-ai>=2.31.6",
    "jupyter-server>=2.17.0",
    "jupyterlab>=4.4.10",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-git>=0.51.2",
    "jupyterlab-github>=4.0.0",
    "jupyterlab-lsp>=5.2.0",
    "jupytext>=1.18.1",
    "nbconvert>=7.16.6",
    "nbdime>=4.0.2",
    "notebook>=7.4.7",
    "papermill>=2.6.0",
    "python-lsp-server[all]>=1.13.1",
]
test = [
    "allure-pytest>=2.15.0",
    "hypothesis>=6.148.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
    "pytest-emoji>=0.2.0",
    "pytest-html>=4.1.1",
    "pytest-icdiff>=0.9",
    "pytest-instafail>=0.5.0",
    "pytest-mock>=3.15.1",
    "pytest-randomly>=4.0.1",
    "pytest-sugar>=1.1.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "syrupy>=5.0.0",
]
