[project]
name = "mcps"
version = "0.1.0"
description = "Model Context Protocol System - Knowledge Graph for the MCP Ecosystem"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Database & ORM
    "sqlmodel==0.0.16",  # Pydantic v2 compatible
    "alembic>=1.17.2",
    "aiosqlite>=0.21.0",
    "sqlalchemy>=2.0.44",

    # Settings & Config
    "pydantic-settings>=2.12.0",

    # HTTP & Network
    "httpx>=0.27.0",
    "tenacity>=9.0.0",

    # Logging & CLI
    "loguru>=0.7.3",
    "typer>=0.15.0",

    # Vector Search
    "sqlite-vec>=0.1.0",

    # Data Export
    "pyarrow>=18.0.0",

    # Parsing & Analysis
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",

    # Package Inspection
    "pkginfo>=1.11.0",

    # API Framework (for apps/api)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-pyyaml>=6.0.0",
]
notebook = [
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "ipywidgets>=8.1.8",
    "jupysql>=0.11.1",
    "jupyter-ai>=2.31.6",
    "jupyter-server>=2.17.0",
    "jupyterlab>=4.4.10",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-git>=0.51.2",
    "jupyterlab-github>=4.0.0",
    "jupyterlab-lsp>=5.2.0",
    "jupytext>=1.18.1",
    "nbconvert>=7.16.6",
    "nbdime>=4.0.2",
    "notebook>=7.4.7",
    "papermill>=2.6.0",
    "python-lsp-server[all]>=1.13.1",
]
test = [
    "allure-pytest>=2.15.0",
    "hypothesis>=6.148.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
    "pytest-emoji>=0.2.0",
    "pytest-html>=4.1.1",
    "pytest-icdiff>=0.9",
    "pytest-instafail>=0.5.0",
    "pytest-mock>=3.15.1",
    "pytest-randomly>=4.0.1",
    "pytest-sugar>=1.1.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "syrupy>=5.0.0",
]
